Prototype of Edit page. Some js libraries included. See the js card on Trello.

--- a/css/central.css
+++ b/css/central.css
@@ -2,3 +2,6 @@
 @import url("../yaml/core/base.min.css");
 @import url("brick-0.9.1.byob.min.css");
 @import url("../fonts/font-awesome/css/font-awesome.min.css");
+
+/*navigator and toolbar on Edit page*/
+@import url("editPage.css");
