--- a/css/central.css
+++ b/css/central.css
@@ -3,18 +3,46 @@
 @import url("brick-0.9.1.byob.min.css");
 @import url("../fonts/font-awesome/css/font-awesome.min.css");
 
+body, html{
+	overflow: hidden;
+	background:rgba(0,0,0,100);
+}
+ul li.page-toogler{
+
+}
+
+.font{
+	font-size:1.5em;
+	margin-top:10px;
+}
+
 #appbar{
 	background:rgba(0,0,0,100);
+	height:10%;
 }
 
 #footer {
 	position:absolute;
 	width:100%;
 	bottom:0%;
+	background-color:rgba(0,0,0,100);
+	height:10%
 }
 
 #slider {
 	position:absolute;
 	right:-50px;
 	transform:rotate(90deg);	
+}
+div.page{
+  position: absolute;
+  top: 10%;
+  left: 0;
+  width:100%;
+  height: 80%;
+  background: red;
+}
+div#edit-screen{
+	left:100%;
+	background: green;
 }
