--- a/css/central.css
+++ b/css/central.css
@@ -42,7 +42,31 @@ div.page{
   height: 80%;
   background: red;
 }
+
 div#edit-screen{
 	left:100%;
 	background: green;
+	transition-property:left;
+	transition-duration:2s;
+}
+
+div#camera-screen{
+	left:200%;
+	background: blue;
+	transition-property:left;
+	transition-duration:2s;
+}
+
+div#collage-screen{
+	left:300%;
+	background: yellow;
+	transition-property:left;
+	transition-duration:2s;
+}
+
+div#setting-screen{
+	left:400%;
+	background: white;
+	transition-property:left;
+	transition-duration:2s;
 }
