--- a/css/central.css
+++ b/css/central.css
@@ -2,6 +2,8 @@
 @import url("../yaml/core/base.min.css");
 @import url("brick-0.9.1.byob.min.css");
 @import url("../fonts/font-awesome/css/font-awesome.min.css");
+/*navigator and toolbar on Edit page*/
+@import url("editPage.css");
 
 body, html{
 	overflow: hidden;
@@ -9,6 +11,10 @@ body, html{
 }
 ul li.page-toogler{
 
+}
+
+header{
+	text-align:center;
 }
 
 .font{
@@ -19,14 +25,6 @@ ul li.page-toogler{
 #appbar{
 	background:rgba(0,0,0,100);
 	height:10%;
-}
-
-#footer {
-	position:absolute;
-	width:100%;
-	bottom:0%;
-	background-color:rgba(0,0,0,100);
-	height:10%
 }
 
 #slider {
@@ -45,28 +43,75 @@ div.page{
 
 div#edit-screen{
 	left:100%;
-	background: green;
+	background: black;
 	transition-property:left;
-	transition-duration:2s;
+	transition-duration:.5s;
 }
 
 div#camera-screen{
 	left:200%;
 	background: blue;
 	transition-property:left;
-	transition-duration:2s;
+	transition-duration:.5s;
 }
 
 div#collage-screen{
 	left:300%;
 	background: yellow;
 	transition-property:left;
-	transition-duration:2s;
+	transition-duration:.5s;
 }
 
 div#setting-screen{
 	left:400%;
 	background: white;
 	transition-property:left;
-	transition-duration:2s;
+	transition-duration:.5s;
+}
+
+/*navigator and toolbar on Edit page*/
+#navigator {
+  background-color: rgb(0,0,0);
+  background-image: none;
+}
+div#back, div#compare {
+  width: 2em;
+}
+ul.edit-footer {
+  width: 100%;
+  position: absolute;
+  bottom: 0px;
+  background-color: rgb(0,0,0);
+  margin: 0px 0px;
+  padding: 0px;
+}
+li {
+  display: inline-block;
+  width: 35px;
+  height: 40px;
+}
+li:hover, li:focus, #back:focus, #back:hover, #compare:focus, #compare:hover {
+  opacity: 0.6;
+}
+a {
+  display: block;
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 30px;
+}
+i.button-fig {
+  color: rgb(128,128,128);
+}
+span.button-title {
+  font-family: "Berlin Sans FB Demi";
+  font-size: 0.4em;
+  color: rgb(255,255,255);
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  margin: 0px auto;
 }
