--- a/css/editPage.css
+++ b/css/editPage.css
@@ -44,6 +44,26 @@ span.button-title {
   transform: translate(-50%, -50%);
   margin: 0px auto;
 }
+.tappable{
+  cursor: pointer;
+}
+#dit-screen .inner span.wrapper{
+  display: inline-table;
+}
+#edit-screen div.inner{
+  width: 100%;
+  height:100%;
+  text-align: center;
+  vertical-align: middle;
+}
 i#choose-image{
+  margin: 0 auto;
+  padding-top: 45%;
   color: #eee;
+  font-size:3em;
+}
+i#choose-image:after{
+  content:"Click here to choose an image";
+  font-size:18px !important;
+  display: block;
 }
