doing scrollbar config

--- a/css/central.css
+++ b/css/central.css
@@ -2,19 +2,47 @@
 @import url("../yaml/core/base.min.css");
 @import url("brick-0.9.1.byob.min.css");
 @import url("../fonts/font-awesome/css/font-awesome.min.css");
+
 /*navigator and toolbar on Edit page*/
 @import url("editPage.css");
 
+/*import main page stylesheet*/
+@import url('pageIntro.css');
+
 body, html{
-	overflow: hidden;
-	background:rgba(0,0,0,100);
+    overflow: hidden;
+    background:rgba(0,0,0,100);
 }
 ul li.page-toogler{
 
 }
-
 header{
 	text-align:center;
+}
+.font{
+    font-size:1.5em;
+    margin-top:10px;
+}
+
+#appbar{
+    background:rgba(0,0,0,100);
+    height:10%;
+}
+
+#footer {
+    position:absolute;
+    width:100%;
+    bottom:0%;
+    background-color:rgba(0,0,0,100);
+    height:10%
+}
+
+#slider {
+    position:absolute;
+    right:-50px;
+    transform:rotate(90deg);    
+  overflow: hidden;
+  background: rgba(0,0,0,100);
 }
 
 div.page{
@@ -32,85 +60,91 @@ div.footer{
   bottom: 0px;
   margin: 0px 0px;
   padding: 0px;
+  background-color: rgb(0,0,0);
+  left: 0;
 }
 
 div#edit-screen{
-	left:100%;
-	background: black;
-	transition-property:left;
-	transition-duration:.5s;
+    left:100%;
+    background: green;
+    transition-property:left;
+    transition-duration:.5s;
 }
-
+div.page {
+  transition-property: left;
+  transition-duration: .5s;
+}
 div#camera-screen{
-	left:200%;
-	background: blue;
-	transition-property:left;
-	transition-duration:.5s;
+  left: 100%;
+  background: blue;
 }
-
+div#edit-screen{
+  left: 200%;
+  background: black;
+}
 div#collage-screen{
-	left:300%;
-	background: yellow;
-	transition-property:left;
-	transition-duration:.5s;
+  left: 300%;
+  background: yellow;
 }
-
 div#setting-screen{
-	left:400%;
-	background: white;
-	transition-property:left;
-	transition-duration:.5s;
+  left: 400%;
+  background: white;
 }
 
-/*navigator and toolbar on Edit page*/
+/*Common attributes of navigator and toolbar*/
 #navigator {
   background-color: rgb(0,0,0);
   background-image: none;
-  visibility:hidden;
+  visibility: hidden;
 }
-div#back, div#save {
-  width: 2em;
+#navigator>header {
+  text-align: center;
 }
-div#intro-footer{
+div#back{
+  /*
+  It seems the appbar brick sets this by default.
+  padding-left: 10px;
+  */
+}
+div#save {
+  padding-right: 10px;
+}
+
+div#camera-footer {
+  background-color: purple;
+  left: 100%;
+}
+div#edit-footer {
+  background-color: black;
+  left: 200%;
+}
+div#collage-footer {
+  background-color: pink;
+  left: 300%;
+}
+div#setting-footer {
+  background-color: green;
+  left: 400%;
+}
+
+div.footer>ul {
   width: 100%;
   position: absolute;
   bottom: 0px;
   background-color: rgb(0,0,0);
   margin: 0px 0px;
   padding: 0px;
-  left:0;
 }
-div#edit-footer {
-  background-color: black;
-  left:100%;
-}
-div#camera-footer {
-  background-color: purple;
-  left:200%;
-}
-div#collage-footer {
-  background-color: pink;
-  left:300%;
-}
-div#setting-footer {
-  background-color: green;
-  left:400%;
-}
-li {
+li.tappable {
   display: inline-block;
   width: 35px;
   height: 40px;
+  cursor: pointer;
 }
-#back{
-	padding-left:10px;
-}
-#save{
-	padding-right:10px;
-}
-li:hover, li:focus, #back:focus, #back:hover, #save:focus, #save:hover {
+li.tappable:hover, li.tappable:focus, #back:focus, #back:hover, #save:focus, #save:hover {
   opacity: 0.6;
 }
-a {
+li.tappable>a {
   display: block;
   position: relative;
   top: 50%;
@@ -133,63 +167,31 @@ span.button-title {
   transform: translate(-50%, -50%);
   margin: 0px auto;
 }
-
-.editButtom{
-  display: block;
-  position: relative;
-  top: 100%;
-  left: 16%;
-  transform: translate(-50%, -50%);
-  font-size: 30px;
-}
-
-.cropButtom{
-  display: block;
-  position: relative;
-  top: 100%;
-  left: 180%;
-  transform: translate(-50%, -50%);
-  font-size: 30px;
-}
-
-.rotateButtom{
-  display: block;
-  position: relative;
-  top: 100%;
-  left: 16%;
-  transform: translate(-50%, -50%);
-  font-size: 30px;
-}
-.effectButtom{
-  display: block;
-  position: relative;
-  top: 100%;
-  left: 16%;
-  transform: translate(-50%, -50%);
-  font-size: 30px;
-}
-
 #edit-intro{
-  visibility: visible;
+  display:inline-block;
   position: absolute;
   bottom: 0;
 }
 #edit-crop{
-  visibility: hidden;
+  display:none;
   position: absolute;
   bottom: 0;
 }
 #edit-rotate{
-  visibility: hidden;
+  display:none;
   position: absolute;
   bottom: 0;
 }
 #edit-effect{
-  visibility: hidden;
+  display:none;
   position: absolute;
   bottom: 0;
 }
-#scrollbar{
-  position: absolute;
-  bottom: 0;
+#scrollBar{
+  height: 50px;
+  width: 200px;
+  background: yellow;
+  overflow-y: hidden;
+  overflow-x: scroll;
+  display:inline-block;
 }
