--- a/css/central.css
+++ b/css/central.css
@@ -187,11 +187,12 @@ span.button-title {
   position: absolute;
   bottom: 0;
 }
-#scrollBar{
+#scrollBar{ 
   height: 50px;
   width: 200px;
-  background: yellow;
-  overflow-y: hidden;
-  overflow-x: scroll;
+  margin-bottom: -27px;
+  background: black;
+  white-space:nowrap;
+  overflow: scroll;
   display:inline-block;
 }
