--- a/css/pageIntro.css
+++ b/css/pageIntro.css
@@ -1,56 +1,51 @@
 /*Style the main screen*/
 div#intro-screen {
-  background-image: url(../images/intro-bg.svg);
-  background-size: 100% 100%;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
+  left: 0;
 }
 .page-toggler {
+  display: block;
   position: absolute;
-  display: table;
   width: 23.125%;
-  height: 19.27%;
   border-radius: 50%;
-  background-repeat: no-repeat;
-  background-size: 100%;
-  background-position: center;
 }
-.page-toggler>a {
-  display: table-cell;
+.page-toggler:after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 0;
+  padding-bottom: 100%;
+}
+.page-toggler a {
+  float: left;
+  width: 100%;
+  padding-top: 50%;
+  line-height: 1em;
+  margin-top: -0.5em;
   text-align: center;
-  vertical-align: middle;
   color: white;
   font-weight: bold;
 }
-.page-toggler#camera {
-  background-color: rgba(71,71,71,0.75);
-  top: 1.2%;
-  left: 48.2%;
-}
-.page-toggler#camera:hover, .page-toggler#camera:focus {
-  background-color: transparent;
-}
 .page-toggler#edit {
-  background-color: rgba(223,223,223,0.56);
-  top: 16.5%;
-  left: 48.2%;
+  background-color: rgba(99,99,99,0.5);
+  top: 2%;
+  left: 45%;
 }
-.page-toggler#edit:hover, .page-toggler#edit:focus {
+.page-toggler#edit:active{
   background-color: transparent;
 }
 .page-toggler#collage {
-  background-color: rgba(255,255,255,0.75);
-  top: 35.8%;
-  left: 48.2%;
+  background-color: rgba(223,223,223,0.56);
+  top: 18%;
+  left: 45%;
 }
-.page-toggler#collage:hover, .page-toggler#collage:focus {
+.page-toggler#collage:active {
   background-color: transparent;
 }
-.page-toggler#setting {
-  background-color: rgba(109,109,109,0.5);
+.page-toggler#about {
+  background-color: rgba(225,225,225,0.4);
   top: 54.2%;
-  left: 10.8%;
+  left: 13.5%;
 }
-.page-toggler#setting:hover, .page-toggler#setting:focus {
+.page-toggler#about:active {
   background-color: transparent;
 }
