--- a/css/editPage.css
+++ b/css/editPage.css
@@ -19,7 +19,7 @@ i#choose-image:after {
   font-size: 18px !important;
   display: block;
 }
-canvas#image-canvas {
+div#image-canvas-wrapper {
   width: 100%;
   height: 100%;
   z-index: 2;
@@ -28,4 +28,3 @@ canvas#image-canvas {
   overflow: scroll;
   display: none;
 }
-
