--- a/css/editPage.css
+++ b/css/editPage.css
@@ -29,3 +29,73 @@ div#image-canvas-wrapper {
   overflow: scroll;
   display: none;
 }
+
+div#stamps-zone {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(0,0,0);
+  overflow: scroll;
+  display: none;
+  z-index: 3;
+}
+#playground {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 0;
+}
+div#stamps-zone>ul :before{
+  content: "Choose your stamps:";
+  text-align: center;
+  color: white;
+  font-size: 18px !important;
+  display: block;
+}
+div#stamps-zone>ul {
+  margin: 0;
+}
+li.stamp {
+  display: inline-block;
+  margin: 10%;
+}
+
+/*toolbar specification*/
+#edit-intro{
+  display: inline-block;
+  position: absolute;
+  bottom: 0;
+}
+#edit-crop{
+  display: none;
+  position: absolute;
+  bottom: 0;
+}
+#edit-rotate{
+  display: none;
+  position: absolute;
+  bottom: 0;
+}
+#edit-effect{
+  display: none;
+  position: absolute;
+  bottom: 0;
+}
+#scrollBar{ 
+  height: 50px;
+  width: 200px;
+  margin-bottom: -27px;
+  background: black;
+  white-space: nowrap;
+  overflow: scroll;
+  display: inline-block;
+}
+#edit-stamps{
+  display: none;
+  position: absolute;
+  bottom: 0;
+}
+
