--- a/css/central.css
+++ b/css/central.css
@@ -13,6 +13,15 @@ body, html{
     overflow: hidden;
     background:rgba(0,0,0,100);
 }
+div#head {
+  position: absolute;
+  left: 100%;
+  top: 0;
+  background-color: black;
+  width: 100%;
+  height: 10%;
+  transition: left .5s;
+}
 ul li.page-toogler{
 
 }
@@ -38,9 +47,9 @@ header{
 }
 
 #slider {
-    position:absolute;
-    right:-50px;
-    transform:rotate(90deg);    
+  position:absolute;
+  right:-50px;
+  transform:rotate(90deg);    
   overflow: hidden;
 }
 body, html {
@@ -83,13 +92,12 @@ div#about-screen{
 /*Common attributes of navigator and toolbar*/
 #navigator {
   position: absolute;
-  top: 0px;
-  left: 100%;
+  top: 0;
+  left: 0;
   background-color: rgb(0,0,0);
   background-image: none;
   height: 10%;
   z-index: 1;
-  transition: left .5s;
 }
 #navigator>header {
   text-align: center;
