--- a/css/editPage.css
+++ b/css/editPage.css
@@ -29,8 +29,7 @@ div#image-canvas-wrapper {
   overflow: scroll;
   display: none;
 }
-
-div#stamps-zone {
+div#fabric-zone {
   position: absolute;
   top: 0;
   left: 0;
@@ -40,6 +39,23 @@ div#stamps-zone {
   overflow: scroll;
   display: none;
   z-index: 3;
+}
+div#text-zone {
+  overflow: hidden;
+  display: none;
+}
+div#text-zone>textarea {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  color: white;
+  font-size: xx-large;
+  background-color: rgb(0,0,0);
+}
+div#stamps-zone {
+  display: none;
 }
 #playground {
   position: absolute;
@@ -72,8 +88,9 @@ li.stamp {
   height: 0;
   margin: 2% 4%;
   padding: 20% 0;
-  box-shadow: 0px 0px 20px 1px #fff inset;
+  box-shadow: 0px 0px 30px 1px #000 inset;
   border-radius: 50%;
+  background-color: white;
 }
 li.stamp>img {
   position: absolute;
@@ -115,12 +132,12 @@ li.stamp>img {
   overflow: scroll;
   display: inline-block;
 }
-#edit-stamps{
+#edit-stamps, #edit-text {
   display: none;
   position: absolute;
   padding: 0 1%;
 }
-#edit-stamps>li{
+#edit-stamps>li, #edit-text>li {
   width: 9%;
   margin: 0 20%;
 }
