Minor bugs fixed. Appbar replaced, null text detection.

--- a/css/central.css
+++ b/css/central.css
@@ -21,7 +21,25 @@ div#head {
   width: 100%;
   height: 10%;
   transition: left .5s;
+  text-align: center;
 }
+
+div#head #back{
+  display: inline-block;
+  float: left;
+}
+
+div#head #loading{
+  display: inline-block;
+  clear: both;
+  color:#eee;
+}
+
+div#head #save{
+  display: inline-block;
+  float: right;
+}
+
 ul li.page-toogler{
 
 }
@@ -43,7 +61,7 @@ header{
     width:100%;
     bottom:0%;
     background-color:rgba(0,0,0,100);
-    height:10%
+    height:15%
 }
 
 #slider {
@@ -83,25 +101,25 @@ div#edit-screen{
   background: black;
 }
 div#collage-screen{
-  background: yellow;
+  background: black;
+  color:#ffffff;
+  text-align: center;
+  padding-top: 45%;
+}
+div#collage-screen i{
+  margin: 0 auto;
 }
 div#about-screen{
-  background: white;
-}
-
-/*Common attributes of navigator and toolbar*/
-#navigator {
-  position: absolute;
-  top: 0;
-  left: 0;
-  background-color: rgb(0,0,0);
-  background-image: none;
-  height: 10%;
-  z-index: 1;
-}
-#navigator>header {
+  background: black;
+  color:#ffffff;
   text-align: center;
+  overflow-y: scroll;
 }
+div#about-screen p, div#about-screen h2{
+  margin: 1.5em;
+  line-height: 1.5em;
+}
+/*Common attributes of navigator and toolbar*/
 div#back{
   /*
   It seems the appbar brick sets this by default.
@@ -117,10 +135,10 @@ div#edit-footer {
   background-color: black;
 }
 div#collage-footer {
-  background-color: pink;
+  background-color: black;
 }
 div#about-footer {
-  background-color: green;
+  background-color: black;
 }
 
 div.footer>ul {
@@ -165,4 +183,17 @@ span.button-title {
   transform: translate(-50%, -50%);
   margin: 0px auto;
 }
-
+i#collage-under-dev{
+  margin: 0 auto;
+  margin-top: 40%;
+  color: #eee;
+  font-size:3em;
+}
+p#collage-under-dev-text{
+  margin: 1em;
+  font-size: 18px !important;
+  display: block;
+}
+#edit-intro{
+  height: 100%;
+}
