--- a/css/editPage.css
+++ b/css/editPage.css
@@ -51,6 +51,7 @@ div#text-zone>textarea {
   width: 100%;
   height: 100%;
   color: white;
+  border: 0;
   font-size: xx-large;
   background-color: rgb(0,0,0);
 }
